log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 07:15:02 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
34eb777
Thu 30 Mar 2023 07:24:39 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 20/70
9016869
Thu 30 Mar 2023 07:28:33 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 20/70
a79ee2b
Thu 30 Mar 2023 07:31:49 PM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
ae7147b
Thu 30 Mar 2023 07:32:27 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
450668d
Thu 30 Mar 2023 07:37:23 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:41:29: error: expected expression before ‘;’ token
   41 |   for(size_t k=l->size ; k> ; k--)
      |                             ^
Compilation failed
05358cb
Thu 30 Mar 2023 07:37:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
5ebadae
Thu 30 Mar 2023 07:42:07 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
7ed1eb8
Thu 30 Mar 2023 07:48:13 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|3
total_score: 30/70
28b0ed6
Thu 30 Mar 2023 07:49:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90711b1
Thu 30 Mar 2023 07:51:55 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|2
total_score: 40/70
9dbe69c
Thu 30 Mar 2023 08:01:04 PM UTC: 
 arraylist.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  7|3
total_score: 30/70
02eedad
Thu 30 Mar 2023 08:01:42 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/70
dcb9e71
Thu 30 Mar 2023 08:02:39 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/70
dba33ae
Thu 30 Mar 2023 08:03:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/70
2e8529e
